<resources>
    <string name="app_name">SmartCampusDemo</string>
    <string name="app_login">登录</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="uname">用户名</string>
    <string name="upass">密码</string>
    <string name="uconpass">再次输入密码</string>
    <string name="sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="sid">学号（可选）</string>
    <string name="tel">手机号（可选）</string>
    <string name="forgot">忘记密码</string>
    <string name="usrMode">用户模式：</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="isLoading">正在加载</string>
    <string name="forums_details">论坛</string>
    <string name="divider">divider</string>
    <string name="reply_tag">回复</string>
    <string name="commit_tag">发送</string>
    <string name="reply_input">请输入回复内容</string>
    <string name="zero">0</string>
    <string name="like">like</string>
    <string name="dislike">dislike</string>

    <!-- 论坛分类-->
    <string name="nengyuan">能源</string>
    <string name="anquan">安全科学与工程</string>
    <string name="guanli">管理</string>
    <string name="jixie">机械工程</string>
    <string name="jianzhu">建筑与土木工程</string>
    <string name="tongxin">通信与信息工程</string>
    <string name="diankong">电气与控制工程</string>
    <string name="cehui">测绘科学与技术</string>
    <string name="jike">计算机科学与技术</string>
    <string name="renwai">人文与外国语</string>
    <string name="dihuan">地质与环境</string>
    <string name="yishu">艺术</string>
    <string name="huaxue">化学与化工</string>
    <string name="cailiao">材料科学与工程</string>
    <string name="lixue">理学</string>
    <string name="tiyu">体育</string>
    <string name="makesi">马克思主义</string>
    <!-- 论坛分类-->

    <string name="click_retry">点击重试</string>
    <string name="publish_title">发表论坛</string>
    <string name="publish_confirm">发表</string>
    <string name="uemail">邮箱</string>
    <string name="error_info_fetch">获取数据错误，下拉刷新重试</string>
</resources>
