<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:gravity="center"
    tools:context="com.example.xavier.smartcampusdemo.Activity.MainActivity" >

    <FrameLayout
        android:id="@+id/username_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:gravity="center" >

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="60dp"
            android:paddingStart="10dp"
            android:paddingEnd="60dp"
            android:maxLength="20"
            android:hint="@string/uname" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/password_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_layout"
        android:layout_marginTop="6dp"
        android:gravity="center" >

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="60dp"
            android:paddingStart="10dp"
            android:paddingEnd="60dp"
            android:maxLength="20"
            android:hint="@string/upass" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/conpassword_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:layout_marginTop="6dp"
        android:gravity="center" >

        <EditText
            android:id="@+id/conpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="60dp"
            android:paddingStart="10dp"
            android:paddingEnd="60dp"
            android:maxLength="20"
            android:hint="@string/uconpass" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/sid_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/conpassword_layout"
        android:layout_marginTop="6dp"
        android:gravity="center" >

        <EditText
            android:id="@+id/sid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="60dp"
            android:paddingStart="10dp"
            android:paddingEnd="60dp"
            android:maxLength="20"
            android:hint="@string/sid" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/tel_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sid_layout"
        android:layout_marginTop="6dp"
        android:gravity="center" >

        <EditText
            android:id="@+id/tel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingRight="60dp"
            android:paddingStart="10dp"
            android:paddingEnd="60dp"
            android:maxLength="20"
            android:hint="@string/tel" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/sign_up_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tel_layout"
        android:layout_marginTop="6dp"
        android:gravity="center" >

        <Button
            android:id="@+id/bt_sign_up"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ff336699"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up" />
    </FrameLayout>


</RelativeLayout>
