<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:gravity="center"
    tools:context="com.example.xavier.smartcampusdemo.Activity.MainActivity" >

    <FrameLayout
        android:id="@+id/username_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:gravity="center" >

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:paddingLeft="50dp"
            android:paddingRight="60dp"
            android:paddingStart="50dp"
            android:paddingEnd="60dp"
            android:maxLength="20"
            android:hint="@string/uname" />
        <ImageView
            android:layout_width="28dp"
            android:layout_height="30dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_gravity="start|center_vertical"
            android:background="@drawable/ic_username"
            android:contentDescription="@string/app_name"/>
        <Button
            android:id="@+id/bt_clear_username"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_text_clear"
            android:layout_gravity="end|center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:visibility="invisible" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/password_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_layout"
        android:layout_marginTop="6dp"
        android:gravity="center" >

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingLeft="50dp"
            android:paddingRight="60dp"
            android:paddingStart="50dp"
            android:paddingEnd="60dp"
            android:maxLength="20"
            android:hint="@string/upass" />
        <ImageView
            android:layout_width="28dp"
            android:layout_height="30dp"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:layout_gravity="start|center_vertical"
            android:background="@drawable/ic_password"
            android:contentDescription="@string/app_name"/>
        <Button
            android:id="@+id/bt_show_password"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_password_show"
            android:visibility="invisible"
            android:layout_gravity="end|center_vertical"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"/>
        <!--<Button-->
            <!--android:id="@+id/bt_pwd_clear"-->
            <!--android:layout_width="30dp"-->
            <!--android:layout_height="30dp"-->
            <!--android:background="@drawable/ic_text_clear"-->
            <!--android:visibility="invisible"-->
            <!--android:layout_gravity="end|center_vertical"-->
            <!--android:layout_marginRight="33dp"-->
            <!--android:layout_marginEnd="33dp"/>-->
    </FrameLayout>

    <FrameLayout
        android:id="@+id/sign_in_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_layout"
        android:layout_marginTop="6dp"
        android:gravity="center" >

        <Button
            android:id="@+id/bt_sign_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ff336699"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:text="@string/sign_in" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/sign_up_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in_layout"
        android:layout_marginTop="6dp"
        android:gravity="center" >
        <TextView
            android:id="@+id/sign_up"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/forgot_password"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/forgot"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </FrameLayout>

</RelativeLayout>
