<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="14dp"
    android:paddingStart="14dp"
    android:paddingRight="14dp"
    android:paddingEnd="14dp"
    android:paddingTop="17dp"
    android:paddingBottom="17dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/details_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="17dp"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/forum_img1"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="" />
        <ImageView
            android:id="@+id/forum_img2"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="" />
        <ImageView
            android:id="@+id/forum_img3"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:baselineAligned="false">
        <LinearLayout
            android:id="@+id/details_like"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_forum_like_before"
            android:clickable="true"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/details_like_icon"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_thumb_up_before"
                android:contentDescription="@string/like" />
            <TextView
                android:id="@+id/details_like_count"
                android:layout_gravity="center_vertical"
                android:text="@string/zero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gainsboro"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/details_dislike"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:background="@drawable/ic_forum_like_before"
            android:clickable="true"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/details_dislike_icon"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_thumb_down_before"
                android:contentDescription="@string/dislike" />
            <TextView
                android:id="@+id/details_dislike_count"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/gainsboro"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>